clusters/takeout/apps/media/qdirstat/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: qdirstat
  namespace: default
  labels:
    app: qdirstat
spec:
  serviceName: qdirstat
  selector:
    matchLabels:
      app: qdirstat
  replicas: 1 # active nas
  template:
    metadata:
      labels:
        app: qdirstat
    spec:
      containers:
        - name: qdirstat
          image: jlesage/qdirstat:latest
          imagePullPolicy: Always
          # command: ["sh","-c","tail -f /dev/null"]
          volumeMounts:
            - name: qdirstat-config-nas
              mountPath: /config
            - name: nas-volume1-media
              mountPath: /mount/nas-volume1-media
            - name: temp
              mountPath: /mount/temp
          resources:
            requests: 
              cpu: 500m
            limits:
              memory: 512Mi
      volumes:
        - name: qdirstat-config-nas
          persistentVolumeClaim:
            claimName: qdirstat-config-nas
        - name: nas-volume1-media
          persistentVolumeClaim:
            claimName: nas-volume1-media
        - name: temp
          persistentVolumeClaim:
            claimName: stash-temp-nas
      imagePullSecrets:
        - name: docker-hub
