clusters/takeout/apps/media/qdirstat/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdirstat
  namespace: media
spec:
  type: NodePort
  selector:
    app: qdirstat
  ports:
    - name: tcp
      protocol: TCP
      port: 5800
      targetPort: 5800
